Enable email sending

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 /tmp/cache/sass/f612100eef7268ee78baaf70eab37577000554fe/_responsive-navbar.scssc
 /tmp/cache/sass/f612100eef7268ee78baaf70eab37577000554fe/_responsive-utilities.scssc
 /tmp/cache/sass/f612100eef7268ee78baaf70eab37577000554fe/_variables.scssc
+/tmp/pids/server.pid
