--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@
 /tmp/capybara/capybara-201209260026231564018830.html
 /tmp/capybara/capybara-201209260032437712161952.html
 /tmp/capybara/capybara-201209260034181101306281.html
+/tmp/capybara/capybara-201210051448302873105376.html
