--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,6 @@
 /tmp/capybara/capybara-201209260032437712161952.html
 /tmp/capybara/capybara-201209260034181101306281.html
 /tmp/capybara/capybara-201210051448302873105376.html
+/tmp/capybara/capybara-201210052146287001459849.html
+/tmp/capybara/capybara-201210052149241611177694.html
+/tmp/capybara/capybara-201210052152547754534849.html
