Add an useful button

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,5 @@
 /tmp/capybara/capybara-201210052146287001459849.html
 /tmp/capybara/capybara-201210052149241611177694.html
 /tmp/capybara/capybara-201210052152547754534849.html
+/tmp/capybara/capybara-201210061609426623216218.html
+/tmp/capybara/capybara-201210061610503481033458.html
