Assign an expert role to a user

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@
 /tmp/capybara/capybara-201210052152547754534849.html
 /tmp/capybara/capybara-201210061609426623216218.html
 /tmp/capybara/capybara-201210061610503481033458.html
+/tmp/capybara/capybara-201210082224591469457477.html
+/tmp/capybara/capybara-201210082229345168390643.html
+/tmp/capybara/capybara-201210082231552424286643.html
+/tmp/capybara/capybara-201210082232198630433321.html
