--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,6 @@
 /tmp/capybara/capybara-201210082229345168390643.html
 /tmp/capybara/capybara-201210082231552424286643.html
 /tmp/capybara/capybara-201210082232198630433321.html
+/tmp/capybara/capybara-201210082241467021697785.html
+/tmp/capybara/capybara-201210082242134012949177.html
+/tmp/.DS_Store
