Add Pygment and Redcarpet

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,10 @@
 /tmp/capybara/capybara-201210130149345218056570.html
 /tmp/capybara/capybara-201210130232373774198126.html
 /tmp/capybara/capybara-201210130234064034858044.html
+/tmp/cache/assets/D96/5E0/sprockets%2F0f9ad21f9a873bb72e412fcb1f3a96b1
+/tmp/cache/assets/E07/260/sprockets%2F6c833ffb7ebf7aaac55a79c5c69125ec
+/tmp/cache/assets/ED9/610/sprockets%2Ffad6cde434a7fb7ec99cde8fff84dfa7
+/tmp/cache/CC3/B70/code--ae6185e07e14153792dd340e9af3ec819d80d8a8
+/tmp/cache/CE9/D90/code--e30360c9e85ba3cc7e4358cd5a1516c6cd43e873
+/tmp/cache/F45/750/code-java-ddc3676b0ea4733db8dbdd5408a2d9f335e0abe8
+/tmp/cache/F58/8A0/code-java-95ddedbd409aa967c34dfb734a579de34805bfaf
