--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,5 @@
 /tmp/cache/CE9/D90/code--e30360c9e85ba3cc7e4358cd5a1516c6cd43e873
 /tmp/cache/F45/750/code-java-ddc3676b0ea4733db8dbdd5408a2d9f335e0abe8
 /tmp/cache/F58/8A0/code-java-95ddedbd409aa967c34dfb734a579de34805bfaf
+/tmp/cache/EBE/
+/tmp/cache/FBD/
