Add delay to put the automate feedback to the background

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,9 @@
 /tmp/cache/E1B/
 /tmp/cache/F5E/
 /tmp/cache/FB0/
+/tmp/cache/C6B/
+/tmp/cache/C93/
+/tmp/cache/D17/
+/tmp/cache/D91/
+/tmp/cache/E98/
+/tmp/cache/F67/
