Remove delay_job from automatic feedback

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,50 @@
 /tmp/cache/D91/
 /tmp/cache/E98/
 /tmp/cache/F67/
+/tmp/cache/.DS_Store
+/tmp/cache/C14/
+/tmp/cache/CBA/
+/tmp/cache/D9E/
+/tmp/cache/DD6/
+/tmp/cache/E09/
+/tmp/cache/E20/
+/tmp/cache/E2F/
+/tmp/cache/E3E/
+/tmp/cache/E5D/
+/tmp/cache/E66/
+/tmp/cache/E74/
+/tmp/cache/ECF/
+/tmp/cache/ED2/
+/tmp/cache/EF4/
+/tmp/cache/EF5/
+/tmp/cache/F05/
+/tmp/cache/F18/
+/tmp/cache/F28/
+/tmp/cache/F44/
+/tmp/cache/F4C/
+/tmp/cache/F4D/
+/tmp/capybara/capybara-201211140017043001651741.html
+/tmp/capybara/capybara-201211140048403001651741.html
+/tmp/capybara/capybara-201211140049193001651741.html
+/tmp/capybara/capybara-201211140049438429349323.html
+/tmp/capybara/capybara-201211140050238429349323.html
+/tmp/capybara/capybara-201211140052238429349323.html
+/tmp/capybara/capybara-201211140053503001651741.html
+/tmp/capybara/capybara-201211140054563001651741.html
+/tmp/capybara/capybara-201211140056268429349323.html
+/tmp/capybara/capybara-201211140056488429349323.html
+/tmp/capybara/capybara-201211140057553001651741.html
+/tmp/capybara/capybara-201211140058173001651741.html
+/tmp/capybara/capybara-201211140059048429349323.html
+/tmp/capybara/capybara-201211140100123001651741.html
+/tmp/capybara/capybara-201211140100298429349323.html
+/tmp/capybara/capybara-201211140100518429349323.html
+/tmp/capybara/capybara-201211140101288429349323.html
+/tmp/capybara/capybara-201211140102253001651741.html
+/tmp/capybara/capybara-201211140102498429349323.html
+/tmp/capybara/capybara-201211140103083001651741.html
+/tmp/capybara/capybara-201211140104163001651741.html
+/tmp/capybara/capybara-201211140104508429349323.html
+/tmp/capybara/capybara-201211140105028429349323.html
+/tmp/capybara/capybara-201211140150098391610037.html
+/tmp/capybara/capybara-201211140151205111954946.html
