Add a test case for automatic feedback

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,23 @@
 /tmp/capybara/capybara-201211140105028429349323.html
 /tmp/capybara/capybara-201211140150098391610037.html
 /tmp/capybara/capybara-201211140151205111954946.html
+/tmp/cache/CCD/
+/tmp/cache/E11/
+/tmp/cache/E75/
+/tmp/cache/E89/
+/tmp/cache/EF0/
+/tmp/cache/F09/
+/tmp/cache/F1D/
+/tmp/capybara/capybara-201211140323218391610037.html
+/tmp/capybara/capybara-201211140324178391610037.html
+/tmp/capybara/capybara-201211140324535111954946.html
+/tmp/capybara/capybara-201211140325415111954946.html
+/tmp/capybara/capybara-201211140325588391610037.html
+/tmp/capybara/capybara-201211140326345111954946.html
+/tmp/capybara/capybara-201211140326528391610037.html
+/tmp/capybara/capybara-201211140330071002867099.html
+/tmp/capybara/capybara-201211140331521002867099.html
+/tmp/capybara/capybara-201211140332138417976881.html
+/tmp/capybara/capybara-201211140332468417976881.html
+/tmp/capybara/capybara-201211140333218417976881.html
+/tmp/capybara/capybara-201211140333528417976881.html
