Fix automatic update bugs

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,4 @@
 /tmp/capybara/capybara-201211140332468417976881.html
 /tmp/capybara/capybara-201211140333218417976881.html
 /tmp/capybara/capybara-201211140333528417976881.html
+/tmp/cache/E5C/
