Add a tag system to question
It does not filter tags yet.

--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,11 @@
 /tmp/capybara/capybara-201211140333218417976881.html
 /tmp/capybara/capybara-201211140333528417976881.html
 /tmp/cache/E5C/
+/tmp/cache/sass/3eda9308c6011fc282a97d348a1f0c302fccc44b/_bootstrap-responsive.scssc
+/tmp/cache/sass/59d6ac9f0a549aa7adc72ce617dda4433fe573c8/_mixins.scssc
+/tmp/cache/sass/59d6ac9f0a549aa7adc72ce617dda4433fe573c8/_responsive-1200px-min.scssc
+/tmp/cache/sass/59d6ac9f0a549aa7adc72ce617dda4433fe573c8/_responsive-767px-max.scssc
+/tmp/cache/sass/59d6ac9f0a549aa7adc72ce617dda4433fe573c8/_responsive-768px-979px.scssc
+/tmp/cache/sass/59d6ac9f0a549aa7adc72ce617dda4433fe573c8/_responsive-navbar.scssc
+/tmp/cache/sass/59d6ac9f0a549aa7adc72ce617dda4433fe573c8/_responsive-utilities.scssc
+/tmp/cache/sass/59d6ac9f0a549aa7adc72ce617dda4433fe573c8/_variables.scssc
