Add an owner's ability
An owner can change his or her objects.

--- a/.gitignore
+++ b/.gitignore
@@ -312,3 +312,10 @@
 /tmp/cache/assets/DA5/
 /tmp/cache/assets/DBD/
 /tmp/cache/assets/E5C/
+/tmp/capybara/capybara-201212081602154161678083.html
+/tmp/capybara/capybara-201212081608094455685435.html
+/tmp/capybara/capybara-201212082147597770110994.html
+/tmp/capybara/capybara-201212082221059728373210.html
+/tmp/capybara/capybara-201212082223111052980399.html
+/tmp/capybara/capybara-201212082224024740455882.html
+/tmp/capybara/capybara-201212082224387153124395.html
