Config for an email

--- a/.gitignore
+++ b/.gitignore
@@ -319,3 +319,17 @@
 /tmp/capybara/capybara-201212082223111052980399.html
 /tmp/capybara/capybara-201212082224024740455882.html
 /tmp/capybara/capybara-201212082224387153124395.html
+/tmp/cache/assets/CE6/
+/tmp/cache/assets/CE9/
+/tmp/cache/assets/CEA/2B0/
+/tmp/cache/assets/CFD/D10/
+/tmp/cache/assets/D1D/
+/tmp/cache/assets/D37/
+/tmp/cache/assets/D3B/
+/tmp/cache/assets/D42/
+/tmp/cache/assets/D43/
+/tmp/cache/assets/D70/
+/tmp/cache/assets/D75/
+/tmp/cache/assets/DC6/
+/tmp/cache/assets/DD1/420/
+/tmp/cache/assets/DDD/
