Add a user feed

--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,11 @@
 /tmp/cache/assets/DDD/
 /tmp/cache/assets/D2D/
 /tmp/cache/assets/D49/
+/tmp/capybara/capybara-201212121312345454048624.html
+/tmp/capybara/capybara-201212121314165355112029.html
+/tmp/capybara/capybara-201212121319426101923504.html
+/tmp/capybara/capybara-201212121320466410897774.html
+/tmp/capybara/capybara-2012121213221140722246.html
+/tmp/capybara/capybara-201212121323419596205159.html
+/tmp/capybara/capybara-201212121325047529089715.html
+/tmp/capybara/capybara-201212121326567346747365.html
