Add Aloha editor

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,312 @@
 /tmp/capybara/capybara-201212121323419596205159.html
 /tmp/capybara/capybara-201212121325047529089715.html
 /tmp/capybara/capybara-201212121326567346747365.html
+/tmp/cache/assets/B88/
+/tmp/cache/assets/BF7/
+/tmp/cache/assets/C09/
+/tmp/cache/assets/C13/
+/tmp/cache/assets/C1A/
+/tmp/cache/assets/C2F/
+/tmp/cache/assets/C3A/
+/tmp/cache/assets/C3C/
+/tmp/cache/assets/C47/
+/tmp/cache/assets/C4B/
+/tmp/cache/assets/C4C/
+/tmp/cache/assets/C4F/
+/tmp/cache/assets/C54/
+/tmp/cache/assets/C56/
+/tmp/cache/assets/C57/
+/tmp/cache/assets/C58/
+/tmp/cache/assets/C59/
+/tmp/cache/assets/C5B/
+/tmp/cache/assets/C5C/
+/tmp/cache/assets/C5D/
+/tmp/cache/assets/C5E/
+/tmp/cache/assets/C63/
+/tmp/cache/assets/C6D/
+/tmp/cache/assets/C6F/
+/tmp/cache/assets/C71/
+/tmp/cache/assets/C73/
+/tmp/cache/assets/C77/
+/tmp/cache/assets/C79/
+/tmp/cache/assets/C7A/060/
+/tmp/cache/assets/C7A/910/
+/tmp/cache/assets/C7B/
+/tmp/cache/assets/C81/
+/tmp/cache/assets/C82/
+/tmp/cache/assets/C85/
+/tmp/cache/assets/C87/
+/tmp/cache/assets/C8B/7A0/
+/tmp/cache/assets/C8D/
+/tmp/cache/assets/C8E/
+/tmp/cache/assets/C93/
+/tmp/cache/assets/C94/
+/tmp/cache/assets/C97/
+/tmp/cache/assets/C98/
+/tmp/cache/assets/C9A/
+/tmp/cache/assets/C9B/990/
+/tmp/cache/assets/C9C/
+/tmp/cache/assets/C9D/
+/tmp/cache/assets/CA5/
+/tmp/cache/assets/CA6/
+/tmp/cache/assets/CA8/
+/tmp/cache/assets/CAA/
+/tmp/cache/assets/CAC/
+/tmp/cache/assets/CAD/
+/tmp/cache/assets/CAE/
+/tmp/cache/assets/CAF/
+/tmp/cache/assets/CB1/
+/tmp/cache/assets/CB3/
+/tmp/cache/assets/CBA/
+/tmp/cache/assets/CBC/
+/tmp/cache/assets/CBD/
+/tmp/cache/assets/CBF/
+/tmp/cache/assets/CC0/
+/tmp/cache/assets/CC3/
+/tmp/cache/assets/CC4/9D0/
+/tmp/cache/assets/CC5/140/
+/tmp/cache/assets/CC5/8A0/
+/tmp/cache/assets/CCA/
+/tmp/cache/assets/CCB/
+/tmp/cache/assets/CCC/
+/tmp/cache/assets/CCE/
+/tmp/cache/assets/CCF/
+/tmp/cache/assets/CD0/
+/tmp/cache/assets/CD1/
+/tmp/cache/assets/CD3/
+/tmp/cache/assets/CD4/
+/tmp/cache/assets/CD6/
+/tmp/cache/assets/CD8/
+/tmp/cache/assets/CDA/
+/tmp/cache/assets/CDD/
+/tmp/cache/assets/CDE/
+/tmp/cache/assets/CDF/
+/tmp/cache/assets/CE1/
+/tmp/cache/assets/CE2/
+/tmp/cache/assets/CE4/A10/
+/tmp/cache/assets/CE4/E40/
+/tmp/cache/assets/CE5/
+/tmp/cache/assets/CE8/
+/tmp/cache/assets/CEA/600/
+/tmp/cache/assets/CEA/E30/
+/tmp/cache/assets/CEC/
+/tmp/cache/assets/CEE/
+/tmp/cache/assets/CF0/
+/tmp/cache/assets/CF1/
+/tmp/cache/assets/CF3/
+/tmp/cache/assets/CF4/
+/tmp/cache/assets/CF5/
+/tmp/cache/assets/CF6/
+/tmp/cache/assets/CF7/
+/tmp/cache/assets/CF8/
+/tmp/cache/assets/CF9/
+/tmp/cache/assets/CFA/
+/tmp/cache/assets/CFC/
+/tmp/cache/assets/CFF/5F0/
+/tmp/cache/assets/D00/
+/tmp/cache/assets/D01/
+/tmp/cache/assets/D02/0F0/
+/tmp/cache/assets/D02/890/
+/tmp/cache/assets/D03/0B0/
+/tmp/cache/assets/D03/800/
+/tmp/cache/assets/D04/
+/tmp/cache/assets/D05/
+/tmp/cache/assets/D06/
+/tmp/cache/assets/D08/
+/tmp/cache/assets/D0A/090/
+/tmp/cache/assets/D0A/900/
+/tmp/cache/assets/D0A/EC0/
+/tmp/cache/assets/D0B/FC0/
+/tmp/cache/assets/D0C/
+/tmp/cache/assets/D10/
+/tmp/cache/assets/D12/
+/tmp/cache/assets/D13/
+/tmp/cache/assets/D14/
+/tmp/cache/assets/D16/
+/tmp/cache/assets/D18/
+/tmp/cache/assets/D19/
+/tmp/cache/assets/D1A/
+/tmp/cache/assets/D1C/
+/tmp/cache/assets/D20/
+/tmp/cache/assets/D22/
+/tmp/cache/assets/D23/640/
+/tmp/cache/assets/D24/
+/tmp/cache/assets/D27/
+/tmp/cache/assets/D28/
+/tmp/cache/assets/D29/
+/tmp/cache/assets/D2B/
+/tmp/cache/assets/D30/
+/tmp/cache/assets/D31/
+/tmp/cache/assets/D32/
+/tmp/cache/assets/D33/
+/tmp/cache/assets/D36/
+/tmp/cache/assets/D39/
+/tmp/cache/assets/D3A/
+/tmp/cache/assets/D3C/
+/tmp/cache/assets/D3D/
+/tmp/cache/assets/D3E/
+/tmp/cache/assets/D40/
+/tmp/cache/assets/D41/
+/tmp/cache/assets/D44/
+/tmp/cache/assets/D45/
+/tmp/cache/assets/D47/
+/tmp/cache/assets/D4A/
+/tmp/cache/assets/D4D/
+/tmp/cache/assets/D4F/
+/tmp/cache/assets/D50/
+/tmp/cache/assets/D52/
+/tmp/cache/assets/D53/
+/tmp/cache/assets/D55/
+/tmp/cache/assets/D56/
+/tmp/cache/assets/D57/
+/tmp/cache/assets/D58/330/
+/tmp/cache/assets/D58/D40/
+/tmp/cache/assets/D59/
+/tmp/cache/assets/D5A/
+/tmp/cache/assets/D5C/
+/tmp/cache/assets/D5D/
+/tmp/cache/assets/D5F/
+/tmp/cache/assets/D60/
+/tmp/cache/assets/D62/D00/
+/tmp/cache/assets/D63/
+/tmp/cache/assets/D64/
+/tmp/cache/assets/D65/
+/tmp/cache/assets/D66/BA0/
+/tmp/cache/assets/D69/
+/tmp/cache/assets/D6B/
+/tmp/cache/assets/D6C/
+/tmp/cache/assets/D6D/
+/tmp/cache/assets/D6F/E60/
+/tmp/cache/assets/D71/
+/tmp/cache/assets/D72/
+/tmp/cache/assets/D76/
+/tmp/cache/assets/D7A/
+/tmp/cache/assets/D7B/
+/tmp/cache/assets/D7C/
+/tmp/cache/assets/D7D/
+/tmp/cache/assets/D7F/
+/tmp/cache/assets/D82/
+/tmp/cache/assets/D83/
+/tmp/cache/assets/D84/
+/tmp/cache/assets/D85/
+/tmp/cache/assets/D89/
+/tmp/cache/assets/D8C/
+/tmp/cache/assets/D8D/
+/tmp/cache/assets/D8F/
+/tmp/cache/assets/D90/
+/tmp/cache/assets/D91/
+/tmp/cache/assets/D92/
+/tmp/cache/assets/D95/
+/tmp/cache/assets/D96/
+/tmp/cache/assets/D97/
+/tmp/cache/assets/D98/
+/tmp/cache/assets/D9A/
+/tmp/cache/assets/D9F/9E0/
+/tmp/cache/assets/D9F/DD0/
+/tmp/cache/assets/DA0/
+/tmp/cache/assets/DA2/
+/tmp/cache/assets/DA3/310/
+/tmp/cache/assets/DA3/320/
+/tmp/cache/assets/DA3/DC0/
+/tmp/cache/assets/DA6/
+/tmp/cache/assets/DA7/
+/tmp/cache/assets/DA8/
+/tmp/cache/assets/DA9/130/
+/tmp/cache/assets/DA9/ED0/
+/tmp/cache/assets/DAB/D70/
+/tmp/cache/assets/DAC/
+/tmp/cache/assets/DAD/300/
+/tmp/cache/assets/DAD/730/
+/tmp/cache/assets/DAD/740/
+/tmp/cache/assets/DAD/F30/
+/tmp/cache/assets/DB4/
+/tmp/cache/assets/DB5/
+/tmp/cache/assets/DB6/
+/tmp/cache/assets/DB7/
+/tmp/cache/assets/DB9/
+/tmp/cache/assets/DBE/
+/tmp/cache/assets/DBF/
+/tmp/cache/assets/DC0/
+/tmp/cache/assets/DC3/
+/tmp/cache/assets/DC4/2E0/
+/tmp/cache/assets/DC4/670/
+/tmp/cache/assets/DC5/
+/tmp/cache/assets/DC7/
+/tmp/cache/assets/DC8/
+/tmp/cache/assets/DCA/
+/tmp/cache/assets/DCB/
+/tmp/cache/assets/DCC/
+/tmp/cache/assets/DCD/
+/tmp/cache/assets/DCE/
+/tmp/cache/assets/DCF/
+/tmp/cache/assets/DD0/
+/tmp/cache/assets/DD1/410/
+/tmp/cache/assets/DD1/680/
+/tmp/cache/assets/DD2/
+/tmp/cache/assets/DD3/
+/tmp/cache/assets/DD5/
+/tmp/cache/assets/DD6/D30/
+/tmp/cache/assets/DD8/
+/tmp/cache/assets/DD9/
+/tmp/cache/assets/DDB/
+/tmp/cache/assets/DDC/
+/tmp/cache/assets/DE0/
+/tmp/cache/assets/DE1/
+/tmp/cache/assets/DE3/
+/tmp/cache/assets/DE4/
+/tmp/cache/assets/DE5/
+/tmp/cache/assets/DE6/
+/tmp/cache/assets/DE7/
+/tmp/cache/assets/DE8/
+/tmp/cache/assets/DE9/
+/tmp/cache/assets/DF0/
+/tmp/cache/assets/DF2/
+/tmp/cache/assets/DF5/
+/tmp/cache/assets/DF6/
+/tmp/cache/assets/DF7/990/
+/tmp/cache/assets/DF7/ED0/
+/tmp/cache/assets/DF8/
+/tmp/cache/assets/DFA/390/
+/tmp/cache/assets/DFA/CB0/
+/tmp/cache/assets/DFB/
+/tmp/cache/assets/DFD/790/
+/tmp/cache/assets/DFD/C10/
+/tmp/cache/assets/DFE/
+/tmp/cache/assets/DFF/
+/tmp/cache/assets/E02/
+/tmp/cache/assets/E03/110/
+/tmp/cache/assets/E03/E40/
+/tmp/cache/assets/E0A/
+/tmp/cache/assets/E0B/
+/tmp/cache/assets/E0D/
+/tmp/cache/assets/E10/
+/tmp/cache/assets/E14/
+/tmp/cache/assets/E19/
+/tmp/cache/assets/E1F/
+/tmp/cache/assets/E24/
+/tmp/cache/assets/E25/
+/tmp/cache/assets/E27/
+/tmp/cache/assets/E28/
+/tmp/cache/assets/E2C/
+/tmp/cache/assets/E2D/
+/tmp/cache/assets/E2F/
+/tmp/cache/assets/E30/
+/tmp/cache/assets/E34/
+/tmp/cache/assets/E35/
+/tmp/cache/assets/E3F/
+/tmp/cache/assets/E41/
+/tmp/cache/assets/E43/
+/tmp/cache/assets/E45/
+/tmp/cache/assets/E48/
+/tmp/cache/assets/E4E/
+/tmp/cache/assets/E50/
+/tmp/cache/assets/E58/
+/tmp/cache/assets/E5D/
+/tmp/cache/assets/E5E/
+/tmp/cache/assets/E5F/
+/tmp/cache/assets/E61/
+/tmp/cache/assets/E89/
+/tmp/cache/assets/E8A/
+/tmp/cache/assets/E92/
+/tmp/cache/assets/E95/
+/tmp/cache/sass/c3e83abe09c8235e16a4b80f7ac3808f597932d1/
