Add a useful button and disable the Aloha sidebar

--- a/.gitignore
+++ b/.gitignore
@@ -652,3 +652,6 @@
 /tmp/cache/assets/E92/
 /tmp/cache/assets/E95/
 /tmp/cache/sass/c3e83abe09c8235e16a4b80f7ac3808f597932d1/
+/tmp/cache/assets/CE0/
+/tmp/cache/assets/DEB/
+/tmp/cache/assets/E22/
