Add scores alerts

--- a/.gitignore
+++ b/.gitignore
@@ -663,3 +663,15 @@
 /tmp/cache/assets/D66/E60/sprockets%2F85ae64edf528ce6e981889f3f3c285d9
 /tmp/cache/assets/DD1/740/sprockets%2Fe2e8f7f4c2e46b20bbaa95d67e83c41e
 /tmp/cache/assets/DF1/
+/tmp/letter_opener/1357679718_70e51a7/
+/tmp/letter_opener/1357679718_7925f42/
+/tmp/letter_opener/1357679718_7b0d82c/
+/tmp/letter_opener/1357679718_a38997e/
+/tmp/letter_opener/1357679718_f4c256f/
+/tmp/letter_opener/1357679719_2cb7c96/
+/tmp/letter_opener/1357679719_6e2e6c1/
+/tmp/letter_opener/1357679719_dbe930c/
+/tmp/letter_opener/1357684272_9036cff/
+/tmp/letter_opener/1357688990_348a386/
+/tmp/letter_opener/1357691362_e17a831/
+/tmp/letter_opener/1357691867_2238c92/
